# GPU-FABRIK-pick-place

./: README.md  gpu_fabrik_wu.py  rviz.rviz
IFRA_LinkAttacher/ros2_LinkAttacher/src/: gazebo_link_attacher.cpp
piper_description/urdf/: piper_description.urdf  piper_description.xacro  piper_description_gazebo.xacro
piper_gazebo/: CMakeLists.txt
piper_gazebo/config/: ros2_controllers.yaml
piper_gazebo/launch/piper_no_gripper/: piper_no_gripper_gazebo.launch.py
piper_gazebo/launch/piper_with_gripper/: piper_gazebo.launch.py
piper_gazebo/models/robotproj_L1/: model.config  model.sdf
piper_gazebo/scripts/: joint8_ctrl.py  pick_and_place.py
piper_gazebo/worlds/: roboproj9.world
piper_gpu_ik/: CMakeLists.txt  package.xml  setup.cfg  setup.py
piper_gpu_ik/piper_gpu_ik_py/: gpu_fabrik_core.py  gpu_fabrik_server.py
piper_gpu_ik/srv/: BatchIk.srv
